--- a/memory4cs/memory4cs.csproj
+++ b/memory4cs/memory4cs.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ByteOrder.cs" />
     <Compile Include="Memory.cs" />
     <Compile Include="Memory.static.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
